# Prosto

./: .gitignore  .kiroignore  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
.github/workflows/: deploy.yml
desktop-tauri/: .gitignore  package-lock.json  package.json
desktop-tauri/app/: offline.html  splash.html
desktop-tauri/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
desktop-tauri/src-tauri/capabilities/: default.json  remote.json
desktop-tauri/src-tauri/icons/: icon.icns
desktop-tauri/src-tauri/permissions/autogenerated/: app_ready.toml  badge_clear.toml  badge_set.toml  popout.toml  win_close.toml  win_is_maximized.toml  win_minimize.toml  win_toggle_maximize.toml
desktop-tauri/src-tauri/shim/: prosto-desktop.js
desktop-tauri/src-tauri/src/: commands.rs  main.rs
docs/: AI Project Context.md  Engineering Constitution.md
messages/: en.json  ru.json
public/: sw.js
scripts/: admin-user.mjs  vendor-twemoji.mjs
services/edge/: gif.go  go.mod  linkpreview.go  main.go  meta.go  ssrf.go
src/: proxy.ts
src/app/: globals.css  layout.tsx  manifest.ts  page.tsx  robots.ts  sitemap.ts
src/config/: index.ts  layout.ts  limits.ts  site.ts  spacing.ts  theme.ts  typography.ts
src/providers/: i18n-provider.tsx  index.tsx  theme-provider.tsx
src/types/: desktop.d.ts  index.ts
supabase/migrations/: 20260621000000_create_profiles.sql  20260621000001_profiles_add_display_name_bio.sql  20260621000002_profiles_add_banner_url.sql  20260621000003_profiles_add_pronouns.sql  20260621000004_profiles_add_verified.sql  (+123 more)
(+432 files in other folders)
